--- a/src/common/theme-toggle/theme-toggle.module.scss
+++ b/src/common/theme-toggle/theme-toggle.module.scss
@@ -1,4 +1,6 @@
 .button {
+  width: 120px;
+  height: 40px;
   padding: 10px 18px;
   border: none;
   border-radius: 12px;
@@ -19,14 +21,4 @@
     transform: translateY(1px);
     box-shadow: inset 0 0 10px rgba(255, 255, 255, 0.1);
   }
-}
-
-[data-theme='light'] {
-  background-color: #f9fafb;
-  color: #111;
-}
-
-[data-theme='dark'] {
-  background-color: #111827;
-  color: #f3f4f6;
 }
