--- a/src/features/forms/ProductOperationForm/DescriptionField/DescriptionField.module.scss
+++ b/src/features/forms/ProductOperationForm/DescriptionField/DescriptionField.module.scss
@@ -1,4 +1,11 @@
 .root {
-  // Add styles if needed
-}
+  margin-bottom: 0;
+  width: 100%;
 
+  :global(.ant-input) {
+    resize: vertical;
+    min-height: 100px;
+    font-family: inherit;
+    line-height: 1.5;
+  }
+}
