--- a/src/features/forms/ProductOperationForm/ProductOperationForm.module.scss
+++ b/src/features/forms/ProductOperationForm/ProductOperationForm.module.scss
@@ -1,4 +1,9 @@
 .root {
-  // Add styles if needed
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+  max-width: 600px;
+  width: 100%;
+  padding: 32px;
+  background: transparent;
 }
-
