--- a/src/features/forms/ProductOperationForm/TypeField/TypeField.module.scss
+++ b/src/features/forms/ProductOperationForm/TypeField/TypeField.module.scss
@@ -1,4 +1,9 @@
 .root {
-  // Add styles if needed
-}
+  margin-bottom: 0;
+  width: 100%;
 
+  :global(.ant-select) {
+    width: 100%;
+    font-family: inherit;
+  }
+}
