--- a/src/common/header/header.module.scss
+++ b/src/common/header/header.module.scss
@@ -21,6 +21,28 @@
     align-items: center;
     gap: 12px;
   }
+  .user {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-right: 10px;
+}
+
+.userName {
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+}
+.logoutButton {
+  background-color: #f0f0f0;
+  border: 1px solid #e0e0e0;
+  border-radius: 10px;  
+  padding: 5px 10px;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 600;
+  color: #000;
+}
 
   @media (max-width: 640px) {
     flex-direction: column;
