--- a/src/pages/profile-screen/profile-screen.module.scss
+++ b/src/pages/profile-screen/profile-screen.module.scss
@@ -3,6 +3,13 @@
   justify-content: center;
 }
 
+.profileInfo {
+  margin-bottom: 20px;
+  padding: 10px;
+  background: #f0f0f0;
+  border-radius: 5px;
+}
+
 .profileForm {
   width: 90%;
 }
