--- a/src/common/product-card-preview/product-card-preview.module.scss
+++ b/src/common/product-card-preview/product-card-preview.module.scss
@@ -62,6 +62,7 @@
 
 .actions {
   display: flex;
-  align-items: center;
-  gap: 8px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 5px;
 }
