--- a/src/pages/signup-redux-thunk-screen/signup-redux-thunk-screen.module.scss
+++ b/src/pages/signup-redux-thunk-screen/signup-redux-thunk-screen.module.scss
@@ -19,12 +19,11 @@
   margin: 20px auto;
 }
 
-.links {
-  list-style-type: none;
-  font-size: 20px;
-  font-weight: 600;
-  padding-left: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+.error {
+  margin-top: 12px;
+  padding: 10px;
+  color: #ff4d4f;
+  background: #fff1f0;
+  border: 1px solid #ffa39e;
+  border-radius: 6px;
 }
